[metadata]
name = oslo.concurrency
summary = Oslo Concurrency library
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/oslo.concurrency/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    oslo_concurrency

[entry_points]
oslo.config.opts =
    oslo.concurrency = oslo_concurrency.opts:list_opts
console_scripts =
    lockutils-wrapper = oslo_concurrency.lockutils:main

[compile_catalog]
directory = oslo_concurrency/locale
domain = oslo_concurrency

[update_catalog]
domain = oslo_concurrency
output_dir = oslo_concurrency/locale
input_file = oslo_concurrency/locale/oslo_concurrency.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo_concurrency/locale/oslo_concurrency.pot
