[metadata]
name = oslo.concurrency
summary = Oslo Concurrency library
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/oslo.concurrency/latest/
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    oslo_concurrency

[entry_points]
oslo.config.opts =
    oslo.concurrency = oslo_concurrency.opts:list_opts
console_scripts =
    lockutils-wrapper = oslo_concurrency.lockutils:main

[extras]
eventlet =
  eventlet>=0.27.0 # MIT
